Fixed sticky title bug on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,10 @@
 }
 
 .info {
-    margin-left: 1em;
+    @media screen and (max-width: 991px) {
+        position: sticky;
+        top: 3.55em;
+    }
 }
 
 .section {
@@ -20,8 +23,13 @@
     &.full-screen {
         height: 100vh;
     }
+
     @media screen and (max-width: 991px) {
         margin-left: 0;
+    }
+
+    .section-margin {
+        margin-left: 1em;
     }
 }
 
