--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -3,7 +3,7 @@
     background: #5ad url("../../assests/headshot.jpg") no-repeat top
         center/cover;
     position: relative;
-    .info {
+    .section-margin {
         position: relative;
         h1 {
             position: absolute;
